--- a/index.html
+++ b/index.html
@@ -1,192 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>PBL Presentation | 2026</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>AI Traffic Signal System | PBL 2026</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- ChartJS -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
 
-    <!-- Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+body {
+    background:#020617;
+    color:#f8fafc;
+    font-family:'Plus Jakarta Sans', sans-serif;
+}
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
+.section {
+    min-height:100vh;
+    padding:120px 8%;
+}
 
-        body {
-            background-color: #020617;
-            color: #f8fafc;
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            scroll-behavior: smooth;
-        }
+.glass {
+    background:rgba(255,255,255,0.03);
+    backdrop-filter:blur(15px);
+    border:1px solid rgba(255,255,255,0.1);
+}
 
-        .glass {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
+.gradient-text {
+    background:linear-gradient(90deg,#60a5fa,#a855f7);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+}
 
-        .gradient-text {
-            background: linear-gradient(90deg, #60a5fa, #a855f7);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-    </style>
+.stat-number {
+    font-size:64px;
+    font-weight:800;
+    color:#3b82f6;
+}
+</style>
 </head>
 
 <body>
 
-<!-- NAVBAR -->
-<nav class="fixed w-full z-50 glass border-b border-slate-800/50 px-8 py-4 flex justify-between items-center">
-    <div>
-        <span class="text-xl font-black uppercase">PBL <span class="text-blue-500">2026</span></span>
-        <p class="text-[10px] text-slate-400 uppercase tracking-widest">
-            Dept. of Computer Science & Engineering
-        </p>
-    </div>
-    <div class="hidden md:flex gap-8 text-[11px] uppercase tracking-widest font-bold opacity-70">
-        <a href="#problem" class="hover:text-blue-400 transition">Problem</a>
-        <a href="#methodology" class="hover:text-blue-400 transition">Methodology</a>
-        <a href="#results" class="hover:text-blue-400 transition">Results</a>
-        <a href="#team" class="hover:text-blue-400 transition">Team</a>
-    </div>
-</nav>
-
-<main class="max-w-6xl mx-auto px-6 pt-40 pb-32 space-y-32">
-
 <!-- HERO -->
-<section class="text-center">
-    <div class="inline-block px-4 py-1 border border-slate-800 rounded-full text-slate-500 text-[10px] font-mono mb-6 uppercase tracking-widest">
-        ID: 2427030236
-    </div>
-
-    <h1 class="text-6xl md:text-7xl font-extrabold mb-8 uppercase leading-tight">
-        <span class="gradient-text">
-            AI-Driven Predictive & Sensor-Assisted Intelligent Traffic Signal System
-        </span>
-    </h1>
-
-    <p class="text-slate-400 max-w-3xl mx-auto italic text-lg leading-relaxed border-l-2 border-blue-500/30 pl-6 text-left">
-        A hybrid AI system that predicts traffic congestion using historical data,
-        behavioral patterns, Google Maps integration, and weather APIs,
-        while using minimal low-power sensors for real-time validation.
-    </p>
+<section class="section flex flex-col justify-center text-center">
+<h1 class="text-6xl md:text-7xl font-extrabold mb-8 gradient-text">
+AI-Driven Predictive & Sensor-Assisted Intelligent Traffic Signal System
+</h1>
+<p class="max-w-4xl mx-auto text-xl text-slate-400 leading-relaxed">
+A hybrid AI system leveraging historical datasets, behavioral modeling,
+Google Maps integration and minimal IoT validation to dynamically adjust
+traffic signals for sustainable smart city mobility.
+</p>
 </section>
 
-<!-- PROBLEM -->
-<section id="problem" class="grid md:grid-cols-2 gap-12 items-stretch">
+<!-- INTRODUCTION -->
+<section class="section grid md:grid-cols-2 gap-12 items-center">
+<div>
+<h2 class="text-5xl font-bold mb-6">Addressing Urban Congestion</h2>
+<p class="text-slate-400 text-lg leading-relaxed">
+Traditional traffic signals operate on static timing cycles, causing
+inefficiencies during both low and peak traffic hours.
+This leads to fuel wastage, pollution, and unnecessary delays.
+Our system introduces predictive intelligence to proactively manage traffic.
+</p>
 
-<div class="glass p-10 rounded-[2.5rem] flex flex-col justify-center border-l-4 border-blue-600">
-    <h2 class="text-3xl font-extrabold mb-6">Problem Statement</h2>
-    <p class="text-slate-400 leading-relaxed text-justify">
-        Traditional traffic signals operate on fixed timing cycles regardless of traffic density.
-        This causes long waiting times during low traffic and severe congestion during peak hours.
-        Pure sensor-based systems consume high power and require heavy maintenance.
-        There is a need for a predictive, energy-efficient, intelligent traffic management system.
-    </p>
+<ul class="mt-6 space-y-3 text-slate-400">
+<li>• Long waiting times during low traffic periods</li>
+<li>• Poor handling of peak hour congestion</li>
+<li>• No integration of weather or events</li>
+<li>• High manpower & energy waste</li>
+</ul>
 </div>
 
-<div class="space-y-6">
-    <div class="glass p-7 rounded-3xl border-r-4 border-blue-500/50">
-        <h3 class="text-blue-400 font-bold text-xs uppercase tracking-widest mb-2">
-            Literature Review
-        </h3>
-        <p class="text-sm text-slate-500 italic">
-            Existing systems rely on fixed timers or heavy real-time sensor usage.
-            Most lack predictive modeling using long-term behavioral and API-integrated data.
-        </p>
-    </div>
+<div class="glass p-10 rounded-3xl">
+<p class="text-blue-400 text-xl font-semibold">
+Conventional traffic lights lack adaptability needed for modern cities.
+</p>
+</div>
+</section>
 
-    <div class="glass p-7 rounded-3xl border-r-4 border-purple-500/50">
-        <h3 class="text-purple-400 font-bold text-xs uppercase tracking-widest mb-2">
-            Research Gap
-        </h3>
-        <p class="text-sm text-slate-500 italic">
-            Our approach combines AI-based prediction with selective sensor validation,
-            balancing efficiency, sustainability, and accuracy.
-        </p>
-    </div>
+<!-- OBJECTIVES -->
+<section class="section">
+<h2 class="text-5xl font-bold text-center mb-16">
+Core Goals of the Intelligent System
+</h2>
+
+<div class="grid md:grid-cols-3 gap-10">
+
+<div class="glass p-8 rounded-3xl">
+<h3 class="text-xl font-bold mb-4 text-blue-400">Predict Traffic Patterns</h3>
+<p class="text-slate-400">
+Use historical datasets & ML models (LSTM, Random Forest)
+to forecast congestion trends.
+</p>
+</div>
+
+<div class="glass p-8 rounded-3xl">
+<h3 class="text-xl font-bold mb-4 text-purple-400">Analyze Mass Behavior</h3>
+<p class="text-slate-400">
+Model office hours, festivals, tourism seasons,
+and large-scale commuting patterns.
+</p>
+</div>
+
+<div class="glass p-8 rounded-3xl">
+<h3 class="text-xl font-bold mb-4 text-green-400">Dynamic Adjustment</h3>
+<p class="text-slate-400">
+AI suggests optimal signal durations
+before congestion occurs.
+</p>
+</div>
+
 </div>
 </section>
 
 <!-- METHODOLOGY -->
-<section id="methodology" class="space-y-12">
-<h2 class="text-4xl font-black text-center uppercase">
-System <span class="text-blue-500">Methodology</span>
+<section class="section">
+<h2 class="text-5xl font-bold text-center mb-16">
+Two-Layer Hybrid Architecture
 </h2>
 
-<div class="grid md:grid-cols-3 gap-8">
+<div class="grid md:grid-cols-2 gap-16">
 
-<div class="glass p-8 rounded-3xl text-center">
-    <i class="fas fa-database text-blue-500 text-3xl mb-4"></i>
-    <h3 class="font-bold mb-2 uppercase text-xs tracking-widest">Dataset / Input</h3>
-    <p class="text-sm text-slate-500">
-        Historical traffic data, Google Maps API,
-        Weather API, government databases,
-        and IoT sensor validation data.
-    </p>
+<div class="glass p-10 rounded-3xl">
+<h3 class="text-2xl font-bold mb-4 text-blue-400">Layer 1: Predictive AI Engine</h3>
+<p class="text-slate-400">
+Trained using historical traffic logs, event patterns, weather data,
+and behavioral trends. Integrates Google Maps API and government data
+to forecast optimal signal durations.
+</p>
 </div>
 
-<div class="glass p-8 rounded-3xl text-center">
-    <i class="fas fa-microchip text-purple-500 text-3xl mb-4"></i>
-    <h3 class="font-bold mb-2 uppercase text-xs tracking-widest">Model Architecture</h3>
-    <p class="text-sm text-slate-500">
-        LSTM, Regression & Random Forest models
-        for traffic prediction with hybrid control architecture.
-    </p>
+<div class="glass p-10 rounded-3xl">
+<h3 class="text-2xl font-bold mb-4 text-purple-400">Layer 2: Sensor Validation</h3>
+<p class="text-slate-400">
+Low-power IoT sensors validate predictions.
+Only activated when deviation exceeds threshold,
+ensuring energy efficiency.
+</p>
+</div>
+
+</div>
+</section>
+
+<!-- PREDICTIVE FACTORS -->
+<section class="section">
+<h2 class="text-5xl font-bold text-center mb-16">
+Predictive Modeling Factors
+</h2>
+
+<div class="grid md:grid-cols-3 gap-10 text-slate-400">
+
+<div>Time-Based (Office Hours, Weekends)</div>
+<div>Event-Based (Festivals, Sports)</div>
+<div>Weather-Based (Rain, Fog, Smog)</div>
+<div>Geographical (Tourist Areas)</div>
+<div>Behavioral (Shopping Trends)</div>
+<div>Infrastructure (Road Work)</div>
+
+</div>
+</section>
+
+<!-- SYSTEM ARCHITECTURE -->
+<section class="section">
+<h2 class="text-5xl font-bold text-center mb-16">
+Five Interconnected Layers
+</h2>
+
+<div class="flex flex-wrap justify-center gap-10 text-center">
+
+<div class="glass p-6 rounded-3xl w-52">Data Collection</div>
+<div class="glass p-6 rounded-3xl w-52">Prediction</div>
+<div class="glass p-6 rounded-3xl w-52">Sensor Layer</div>
+<div class="glass p-6 rounded-3xl w-52">Control Layer</div>
+<div class="glass p-6 rounded-3xl w-52">Monitoring</div>
+
+</div>
+</section>
+
+<!-- TECHNOLOGY STACK -->
+<section class="section">
+<h2 class="text-5xl font-bold text-center mb-16">
+Technology Stack
+</h2>
+
+<div class="grid md:grid-cols-2 gap-10 text-slate-400">
+
+<div>
+<h3 class="font-bold text-blue-400 mb-2">Programming & AI</h3>
+Python, TensorFlow, Scikit-learn
+</div>
+
+<div>
+<h3 class="font-bold text-purple-400 mb-2">Data APIs</h3>
+Google Maps API, Weather API, Government DB
+</div>
+
+<div>
+<h3 class="font-bold text-green-400 mb-2">IoT Hardware</h3>
+Raspberry Pi, IR/Ultrasonic Sensors
+</div>
+
+<div>
+<h3 class="font-bold text-yellow-400 mb-2">Cloud & Visualization</h3>
+AWS, MongoDB, React.js, Power BI
 </div>
 
 </div>
 </section>
 
 <!-- RESULTS -->
-<section id="results" class="glass p-12 rounded-[3.5rem] border-t-4 border-blue-500">
-<h2 class="text-3xl font-black mb-12 text-center uppercase">
-Results & <span class="text-blue-500">Analysis</span>
+<section class="section text-center">
+<h2 class="text-5xl font-bold mb-16">
+Transformative Impact
 </h2>
 
-<div class="h-80">
-    <canvas id="resultsChart"></canvas>
+<div class="grid md:grid-cols-4 gap-12">
+
+<div>
+<div class="stat-number">25%</div>
+<p>Congestion Reduction</p>
 </div>
 
+<div>
+<div class="stat-number">15%</div>
+<p>Fuel Savings</p>
+</div>
+
+<div>
+<div class="stat-number">90%</div>
+<p>Energy Efficiency</p>
+</div>
+
+<div>
+<div class="stat-number">100%</div>
+<p>Scalability</p>
+</div>
+
+</div>
 </section>
 
-</main>
+<!-- FUTURE -->
+<section class="section">
+<h2 class="text-5xl font-bold text-center mb-16">
+Future Enhancements
+</h2>
 
-<footer class="py-12 text-center bg-black/40 border-t border-slate-900">
-    <p class="text-slate-600 text-[10px] font-bold tracking-[0.3em] uppercase">
-        Manipal University Jaipur
-    </p>
-</footer>
+<div class="grid md:grid-cols-2 gap-10 text-slate-400">
 
-<script>
-new Chart(document.getElementById('resultsChart'), {
-    type: 'bar',
-    data: {
-        labels: ['Fixed Timer System','AI Hybrid System'],
-        datasets: [{
-            data: [68,90],
-            backgroundColor: ['#1e293b','#3b82f6'],
-            borderRadius: 15,
-            barThickness: 60
-        }]
-    },
-    options:{
-        responsive:true,
-        maintainAspectRatio:false,
-        plugins:{ legend:{display:false}},
-        scales:{
-            y:{ beginAtZero:true, grid:{color:'#ffffff05'} },
-            x:{ grid:{display:false}}
-        }
-    }
-});
-</script>
+<div>Emergency Vehicle Priority</div>
+<div>Real-Time Mobile Alerts</div>
+<div>Solar Powered Signals</div>
+<div>Reinforcement Learning</div>
+<div>Urban Planning Collaboration</div>
+
+</div>
+</section>
+
+<!-- CONCLUSION -->
+<section class="section text-center">
+<h2 class="text-6xl font-bold gradient-text mb-10">
+A Blueprint for Smart Urban Mobility
+</h2>
+
+<p class="max-w-4xl mx-auto text-lg text-slate-400 leading-relaxed">
+This AI-driven predictive system modernizes traffic management by combining
+behavioral modeling, historical analytics and minimal IoT validation.
+It ensures adaptive signal control, reduced congestion,
+lower fuel consumption and scalable smart city deployment.
+</p>
+</section>
 
 </body>
 </html>
+
 
