--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>AI Traffic Signal System | PBL 2026</title>
+<title>AI Predictive Traffic Signal | PBL 2026</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 <style>
@@ -14,262 +13,229 @@
 
 body{
     margin:0;
-    background:#0a0f1f;
-    color:#e2e8f0;
+    background:linear-gradient(135deg,#0f172a,#1e293b);
+    color:#f1f5f9;
     font-family:'Inter',sans-serif;
-    overflow-x:hidden;
 }
 
-/* Animated Gradient Background */
-body::before{
-    content:"";
-    position:fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    background:radial-gradient(circle at 20% 30%,#3b82f620,transparent 40%),
-               radial-gradient(circle at 80% 70%,#a855f720,transparent 40%);
-    z-index:-2;
-}
-
-/* Particles Canvas */
-#particles{
-    position:fixed;
-    top:0; left:0;
-    width:100%;
-    height:100%;
-    z-index:-1;
-}
-
-/* Section Styling */
 .section{
     min-height:100vh;
-    padding:120px 10%;
+    padding:120px 8%;
     display:flex;
     flex-direction:column;
     justify-content:center;
 }
 
-.glass{
+.card{
     background:rgba(255,255,255,0.05);
-    backdrop-filter:blur(20px);
-    border:1px solid rgba(255,255,255,0.08);
-    border-radius:25px;
-    padding:40px;
+    backdrop-filter:blur(15px);
+    border:1px solid rgba(255,255,255,0.1);
+    border-radius:20px;
+    padding:35px;
+    transition:0.4s;
 }
 
-/* Glow Effect */
-.glow{
-    text-shadow:0 0 20px #3b82f6;
+.card:hover{
+    transform:translateY(-8px);
+    box-shadow:0 0 40px rgba(59,130,246,0.4);
 }
 
-/* Animated Fade */
-.fade{
-    opacity:0;
-    transform:translateY(40px);
-    transition:all 1s ease;
-}
-.fade.show{
-    opacity:1;
-    transform:translateY(0);
-}
-
-/* Stats */
-.stat{
-    font-size:60px;
-    font-weight:800;
+h1,h2{
     background:linear-gradient(90deg,#3b82f6,#a855f7);
     -webkit-background-clip:text;
     -webkit-text-fill-color:transparent;
+}
+
+a{
+    color:#60a5fa;
+    text-decoration:underline;
 }
 </style>
 </head>
 
 <body>
 
-<canvas id="particles"></canvas>
+<!-- INTRODUCTION -->
+<section class="section">
+<h1 class="text-6xl font-extrabold mb-6">Addressing Urban Congestion</h1>
 
-<!-- HERO -->
-<section class="section text-center">
-<h1 class="text-6xl md:text-7xl font-extrabold glow fade">
-AI-Driven Predictive & Sensor-Assisted Intelligent Traffic Signal System
-</h1>
-<p class="mt-8 text-xl max-w-4xl mx-auto text-slate-300 fade">
-Urban congestion is not just a traffic problem — it is an energy,
-economic, and environmental crisis. Our system redefines traffic
-management using Artificial Intelligence, predictive analytics,
-and selective IoT validation to create adaptive smart intersections.
-</p>
-</section>
+<div class="card">
+<h2 class="text-3xl font-bold mb-4">The Challenge of Static Traffic Management</h2>
 
-<!-- PROBLEM -->
-<section class="section fade">
-<h2 class="text-5xl font-bold mb-10">🚦 The Problem We Address</h2>
-
-<div class="glass">
-<p class="text-lg leading-relaxed text-slate-300">
-Traditional traffic signals operate on static timers.
-They do not understand traffic density, weather conditions,
-festivals, office hours, or tourist influx.
-This results in unnecessary waiting, fuel wastage,
-air pollution, and poor emergency handling.
+<p>
+Traffic congestion remains a persistent and costly challenge in urban environments,
+leading to increased fuel consumption, severe air pollution,
+and significant time wastage for commuters.
+Traditional traffic signals operate on fixed timing cycles,
+a static mechanism that fails to adapt to dynamic traffic density changes.
 </p>
 
-<ul class="mt-6 space-y-3 text-slate-300">
-<li>• Peak hour congestion not optimized</li>
-<li>• Idle fuel wastage during low traffic</li>
-<li>• No integration with real-time data platforms</li>
-<li>• High power consumption in full-sensor systems</li>
+<ul class="mt-6 space-y-2">
+<li>• Long waiting times during low-traffic periods.</li>
+<li>• Poor traffic management during peak hours.</li>
+<li>• Wastage of manpower and energy.</li>
+<li>• Inability to consider weather, events, or holidays.</li>
 </ul>
+
+<p class="mt-6">
+The proposed solution is a predictive, data-driven, semi-automated system
+designed to intelligently optimize signal timing.
+</p>
 </div>
 </section>
 
-<!-- SOLUTION -->
-<section class="section fade">
-<h2 class="text-5xl font-bold mb-10">🧠 Our Intelligent Hybrid Solution</h2>
+<!-- OBJECTIVES -->
+<section class="section">
+<h1 class="text-5xl font-bold mb-12">Core Goals of the Intelligent Signal System</h1>
+
+<div class="grid md:grid-cols-3 gap-8">
+
+<div class="card">
+<h3 class="text-xl font-bold mb-3">Predict Traffic Patterns</h3>
+Utilize historical and external datasets to forecast traffic density
+across different times and conditions.
+</div>
+
+<div class="card">
+<h3 class="text-xl font-bold mb-3">Analyze Mass Behavior</h3>
+Incorporate office hours, festivals, tourist seasons,
+and large-scale behavioral patterns.
+</div>
+
+<div class="card">
+<h3 class="text-xl font-bold mb-3">Integrate Diverse Data</h3>
+Combine Google Maps, Weather APIs, and Government traffic databases.
+</div>
+
+<div class="card">
+<h3 class="text-xl font-bold mb-3">Minimize Power Use</h3>
+Deploy limited IoT sensors strictly for real-time validation.
+</div>
+
+<div class="card">
+<h3 class="text-xl font-bold mb-3">Enable Dynamic Adjustment</h3>
+Adjust signal timing dynamically based on AI predictions.
+</div>
+
+</div>
+</section>
+
+<!-- METHODOLOGY -->
+<section class="section">
+<h1 class="text-5xl font-bold mb-12">Two-Layer Hybrid Architecture</h1>
 
 <div class="grid md:grid-cols-2 gap-10">
 
-<div class="glass">
-<h3 class="text-2xl font-bold mb-4 text-blue-400">Predictive AI Engine</h3>
-<p>
-Using historical traffic data, time-series forecasting (LSTM),
-and machine learning models, the system predicts congestion
-before it happens.
-It integrates Google Maps API, weather data,
-government traffic logs, and event calendars.
-</p>
+<div class="card">
+<h2 class="text-2xl font-bold mb-4">Layer 1: Predictive AI Engine</h2>
+This layer forecasts future traffic using LSTM, Regression,
+and Random Forest models trained on historical datasets.
+It integrates:
+<ul class="mt-4 space-y-2">
+<li>• <a href="https://developers.google.com/maps/documentation" target="_blank">Google Maps Platform API</a></li>
+<li>• <a href="https://openweathermap.org/api" target="_blank">Weather API (OpenWeather)</a></li>
+<li>• Government traffic databases</li>
+</ul>
 </div>
 
-<div class="glass">
-<h3 class="text-2xl font-bold mb-4 text-purple-400">Sensor Validation Layer</h3>
-<p>
-Instead of running heavy sensors continuously,
-low-power IoT validation activates only when prediction deviation
-crosses a threshold — ensuring both accuracy and sustainability.
-</p>
+<div class="card">
+<h2 class="text-2xl font-bold mb-4">Layer 2: Sensor-Assisted Validation</h2>
+Low-power IoT sensors (IR/Ultrasonic) validate AI predictions.
+If deviation exceeds threshold,
+corrective adjustments are triggered while maintaining energy efficiency.
 </div>
 
 </div>
 </section>
 
-<!-- WORKFLOW -->
-<section class="section fade">
-<h2 class="text-5xl font-bold mb-10">⚙ System Workflow</h2>
+<!-- PREDICTIVE FACTORS -->
+<section class="section">
+<h1 class="text-5xl font-bold mb-12">Forecasting Traffic: AI Modeling Categories</h1>
 
-<div class="glass">
-<p class="leading-relaxed text-lg text-slate-300">
-1️⃣ Data Collection (APIs + Historical Logs)  
-2️⃣ AI Model Training & Prediction  
-3️⃣ Signal Timing Optimization  
-4️⃣ IoT Sensor Cross-Validation  
-5️⃣ Continuous Feedback Learning  
+<div class="grid md:grid-cols-3 gap-8">
 
-This creates a self-improving adaptive ecosystem.
-</p>
+<div class="card">Time-Based (office hours, weekends)</div>
+<div class="card">Event-Based (festivals, sports)</div>
+<div class="card">Weather-Based (rain, fog, smog)</div>
+<div class="card">Geographical (tourist zones)</div>
+<div class="card">Behavioral (shopping seasons)</div>
+<div class="card">Infrastructure (road work)</div>
+<div class="card">External Data (Google APIs & transport analytics)</div>
+
 </div>
 </section>
 
 <!-- RESULTS -->
-<section class="section text-center fade">
-<h2 class="text-5xl font-bold mb-16">📊 Impact & Results</h2>
+<section class="section text-center">
+<h1 class="text-5xl font-bold mb-12">Transformative Impact on Urban Mobility</h1>
 
 <div class="grid md:grid-cols-4 gap-10">
-<div>
-<div class="stat">25%</div>
-<p>Congestion Reduction</p>
-</div>
-<div>
-<div class="stat">18%</div>
-<p>Fuel Savings</p>
-</div>
-<div>
-<div class="stat">30%</div>
-<p>Waiting Time Reduced</p>
-</div>
-<div>
-<div class="stat">90%</div>
-<p>Energy Efficiency</p>
-</div>
-</div>
-</section>
 
-<!-- FUTURE -->
-<section class="section fade">
-<h2 class="text-5xl font-bold mb-10">🚀 Future Enhancements</h2>
-
-<div class="glass">
-<p class="leading-relaxed text-lg text-slate-300">
-• Emergency vehicle auto-priority system  
-• Real-time citizen mobile notifications  
-• Solar-powered smart signals  
-• Reinforcement learning for autonomous optimization  
-• City-wide adaptive network synchronization  
-</p>
+<div class="card">
+<h2 class="text-4xl font-bold">25%</h2>
+Congestion Reduction
 </div>
-</section>
 
-<!-- CONCLUSION -->
-<section class="section text-center fade">
-<h2 class="text-6xl font-extrabold glow mb-8">
-Smart Cities Begin With Smart Signals
-</h2>
-<p class="max-w-4xl mx-auto text-lg text-slate-300 leading-relaxed">
-This project transforms conventional traffic management
-into an intelligent predictive ecosystem.
-By combining AI foresight with minimal IoT validation,
-we achieve efficiency, sustainability,
-and scalability for future urban environments.
+<div class="card">
+<h2 class="text-4xl font-bold">15%</h2>
+Fuel Savings
+</div>
+
+<div class="card">
+<h2 class="text-4xl font-bold">90%</h2>
+Energy Efficiency
+</div>
+
+<div class="card">
+<h2 class="text-4xl font-bold">100%</h2>
+Scalability
+</div>
+
+</div>
+
+<p class="mt-10 max-w-4xl mx-auto">
+The system ensures intelligent adaptive signal management,
+leading to a more efficient and sustainable urban environment.
 </p>
 </section>
 
-<script>
-// Fade-in animation
-const faders=document.querySelectorAll('.fade');
-window.addEventListener('scroll',()=>{
-faders.forEach(el=>{
-const rect=el.getBoundingClientRect();
-if(rect.top<window.innerHeight-100){
-el.classList.add('show');
-}
-});
-});
+<!-- TECHNOLOGY STACK -->
+<section class="section">
+<h1 class="text-5xl font-bold mb-12">Technology Stack</h1>
 
-// Simple moving particles
-const canvas=document.getElementById("particles");
-const ctx=canvas.getContext("2d");
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
+<div class="grid md:grid-cols-2 gap-10">
 
-let particles=[];
-for(let i=0;i<60;i++){
-particles.push({
-x:Math.random()*canvas.width,
-y:Math.random()*canvas.height,
-r:Math.random()*2+1,
-dx:(Math.random()-0.5)*0.5,
-dy:(Math.random()-0.5)*0.5
-});
-}
+<div class="card">
+<h2 class="text-xl font-bold mb-4">Programming & AI</h2>
+• Python  
+• TensorFlow / Scikit-learn  
+</div>
 
-function animate(){
-ctx.clearRect(0,0,canvas.width,canvas.height);
-particles.forEach(p=>{
-ctx.beginPath();
-ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-ctx.fillStyle="#3b82f6";
-ctx.fill();
-p.x+=p.dx;
-p.y+=p.dy;
-if(p.x<0||p.x>canvas.width)p.dx*=-1;
-if(p.y<0||p.y>canvas.height)p.dy*=-1;
-});
-requestAnimationFrame(animate);
-}
-animate();
-</script>
+<div class="card">
+<h2 class="text-xl font-bold mb-4">Data APIs</h2>
+• <a href="https://developers.google.com/maps/documentation" target="_blank">Google Maps Platform</a>  
+• <a href="https://openweathermap.org/api" target="_blank">OpenWeather API</a>  
+</div>
+
+<div class="card">
+<h2 class="text-xl font-bold mb-4">IoT Hardware</h2>
+• Raspberry Pi  
+• IR/Ultrasonic Sensors  
+</div>
+
+<div class="card">
+<h2 class="text-xl font-bold mb-4">Cloud & Databases</h2>
+• AWS / Firebase  
+• MongoDB  
+</div>
+
+</div>
+</section>
 
 </body>
 </html>
+
+
 
 
 
